src/objects/n2de__Team_member__c.object
<CustomObject>
    <description>Team members</description>
    <fields>
        <fullName>n2de__Daily_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Daily assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution hours</label>
        <referenceTo>n2de__Distribution_hours__c</referenceTo>
        <relationshipLabel>Distribution team members</relationshipLabel>
        <relationshipName>Distribution_team_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Half_hour_assignment_count__c</fullName>
        <label>Half hour assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Hourly_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hourly assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_member_distribution_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable member distribution hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_assignment_date__c</fullName>
        <label>Last assignment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_count_reset_date__c</fullName>
        <label>Last count reset date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_edited_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last edited by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distribution_team_members_lastedited</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Last_edited_date__c</fullName>
        <label>Last edited date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_load_balance_reset__c</fullName>
        <label>Last load balance reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Load_balanced_count__c</fullName>
        <label>Load balanced count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Member_cap__c</fullName>
        <label>Member cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Monthly_assignment_count__c</fullName>
        <label>Monthly assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Number_of_active_objects__c</fullName>
        <label>Number of active objects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Queue_id__c</fullName>
        <label>Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Suspend_from_date__c</fullName>
        <label>Suspend from date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Suspend_to_date__c</fullName>
        <label>Suspend to date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Team__c</fullName>
        <label>Distribution team</label>
        <referenceTo>n2de__Team__c</referenceTo>
        <relationshipLabel>Distribution team members</relationshipLabel>
        <relationshipName>Team_members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributor_group_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Username__c</fullName>
        <formula>n2de__User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Weighting__c</fullName>
        <label>Weighting</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Distribution team member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution team members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>